# wallpaperize

./: README.md  Wallpaperize  make.sh  meson.build
data/: com.github.philip-scott.wallpaperize.appdata.xml  com.github.philip-scott.wallpaperize.appdata.xml.in  com.github.philip-scott.wallpaperize.contract  com.github.philip-scott.wallpaperize.desktop.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.philip-scott.wallpaperize.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+156 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  Wallpaperize.vala  Window.vala  meson.build  wapaperize.contract
